@@ -3,12 +3,14 @@ package com.backendeva.backend.services;
 import com.backendeva.backend.model.User;
 import com.backendeva.backend.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImp implements UserDetailsService {
@@ -21,6 +23,11 @@ public class UserDetailsServiceImp implements UserDetailsService {
         User user = userRepository.findFirstByEmailOrderByIdAsc(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
 
-        return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(), Collections.emptyList());
+        List<SimpleGrantedAuthority> authorities = Collections.emptyList();
+        if (user.getRol() != null && !user.getRol().isEmpty()) {
+            authorities = List.of(new SimpleGrantedAuthority("ROLE_" + user.getRol().toUpperCase()));
+        }
+
+        return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(), authorities);
     }
 }
